# Ravinala

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPT_TOMORROW.md  AUDIT_REPORT.md  CUsersMatthiasDesktopdoc_content.txt  GenesixSidebar.jsx  INSTALLATION_GUIDE.md  INTEGRATION_REPORT.md  LANGGRAPH_AGENT_MONITOR_PROMPT.md  MACRO_DASHBOARD_GUIDE.md  OMEGA_v2.1_BUILD_PROGRESS.md  OMEGA_v2.1_IMPLEMENTATION_PLAN.md  OMEGA_v2.1_WEEK3_COMPLETION.md  QUICKSTART.md  RAVINALA_v2_STATUS.md  README.md  STRUCTURE.md  _patch_etf.py  check_sidebar.py  company_analyzer_page.py  launch.bat  prompt soir24032026.md  test_tasks_3_4.py  test_universe_explorer.py
montecarlo/: .gitignore  AGENT_INSTRUCTIONS.md  AGENT_INSTRUCTIONS_FRONTEND.md  AUDIT_RULES.md  BUTTON_DESIGN_SYSTEM.md  BUTTON_SYSTEM_AUDIT_COMPLETE.md  CLAUDE.md  OMEGA_v2.1_TASK7_COMPLETION.md  README.md  README_OMEGA.md  install.bat  launch.bat  launch_omega.bat  pyproject.toml  ruff.toml  test_dom_check.py  test_full_audit.py  test_minimal_iframe.py  test_output.txt  test_scroll.py  test_scroll_v3.py  test_scroll_v4.py  test_scroll_v5.py  test_scroll_v6.py  test_scroll_v7.py  test_scroll_v8.py  test_scroll_v9.py  test_task_7.py
montecarlo/Project NEwbie/: ._Brakata
montecarlo/backend/: __init__.py  alembic.ini  requirements.txt
montecarlo/data/: access_log.json  sessions.json  users.json
montecarlo/deployment/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  schema.sql  verify.bat  verify.sh
montecarlo/docs/: GENESIX_SUITE_INTEGRATION.md  OMEGA_COMPLETE_GUIDE.md  OMEGA_FINAL_DELIVERY.md  OMEGA_IMPLEMENTATION_SUMMARY.md  OMEGA_LAUNCH_GUIDE.md  PORTFOLIO_CONSTRUCTION_TARGET_ARCHITECTURE.md  PRIMARY_SOURCE_ACTIVE_REQUIREMENTS.md  PRIMARY_SOURCE_AGENT_EXECUTION_PROTOCOL.md  PRIMARY_SOURCE_AGENT_MASTER_PROMPT.md  PRIMARY_SOURCE_BACKEND_ENGINEERING_BASELINE.md  PRIMARY_SOURCE_BASELINE_INDEX.md  PRIMARY_SOURCE_DELTA_LEDGER.md  PRIMARY_SOURCE_PORTFOLIO_CONSTRUCTION_BASELINE.md  PRIMARY_SOURCE_PORTFOLIO_PLATFORM_BENCHMARKS.md  PRIMARY_SOURCE_QUANT_AND_MODEL_RISK_BASELINE.md  PRIMARY_SOURCE_SECURITY_AND_OPERATIONS_BASELINE.md  PRIMARY_SOURCE_SUBAGENT_PROMPT_PACK.md  RAVINALA_v3_QUICK_REFERENCE.md  RAVINALA_v3_SETUP_GUIDE.md  STEP7_PROGRESS_REPORT.md  (+19 more)
(+841 files in other folders)
