[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravinala"
version = "2.0.0"
description = "Ravinala by TSIVAHINY Matthias — The Cross-Asset Quantum Structuring Lab"
authors = [
    {name = "TSIVAHINY Matthias", email = "info@ravinala.io"}
]
license = {text = "Proprietary"}
keywords = ["derivatives", "pricing", "structured-products", "black-scholes", "monte-carlo", "quantitative-finance"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0,<3.0",
    "plotly>=5.20.0",
    "streamlit>=1.32.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "yfinance>=0.2.38",
    "reportlab>=4.1.0",
    "openpyxl>=3.1.0",
    "kaleido>=0.2.1",
    "httpx>=0.27.0",       # Frontend → Backend HTTP calls + FastAPI TestClient
    "anthropic>=0.30.0",   # LLM narrative generation (Anthropic Claude)
    "celery[redis]>=5.3.0",
    "redis>=5.0.1",
    "flower>=2.0.0",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-asyncio>=0.24.0", "black>=23.0.0", "pylint>=2.17.0"]
test = ["pytest>=9.0.0", "pytest-asyncio>=0.24.0"]
genesix = [
    # ML & Risk Models
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.42",
    "arch>=6.0",
    # Data & Features
    "vaderSentiment>=3.3",
    "pytrends>=4.9",
    "fredapi>=0.5",
    "wbgapi>=1.0",
    "newsapi-python>=0.2",
    "openmeteo-requests>=1.0",
    "ta>=0.10.2",
    "pycoingecko>=3.0.0",
    "praw>=7.7.0",
    # Export & Caching
    "fpdf2>=2.7.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0",
    "hmmlearn>=0.3",
    "python-dotenv>=1.0",
]
genesix-full = [
    "torch>=2.0",
    "transformers>=4.30",
]

[project.urls]
Homepage = "https://ravinala.io"
Repository = "https://github.com/zetaxelor/ravinala"

[project.scripts]
ravinala = "src.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
cache_dir = "tmp/.pytest_cache"
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
